--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
+    "detox": "^17.8.0",
     "eslint": "^6.5.1",
-    "jest": "^25.1.0",
+    "jest": "^26.4.2",
+    "jest-circus": "^26.4.2",
+    "jest-cli": "^26.4.2",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
